changing token type to HMAC logic
